--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         <!-- Search -->
         <div
-          class="hidden sm:flex flex-1 items-center justify-center relative mx-4"
+          class="hidden sm:flex flex-1 items-center justify-center mx-4 relative"
         >
           <div class="relative w-full max-w-md">
             <label for="searchbox" class="sr-only">Search candies</label>
@@ -124,19 +124,21 @@
                 />
               </svg>
             </div>
-          </div>
 
-          <ul
-            id="hits-dropdown"
-            class="absolute top-full left-0 w-full mt-1 bg-white text-rose-800 rounded-lg shadow-lg max-h-60 overflow-y-auto hidden z-50"
-          ></ul>
+            <ul
+              id="hits-dropdown"
+              class="absolute top-full left-0 w-full mt-1 bg-white text-rose-800 rounded-lg shadow-lg max-h-60 overflow-y-auto hidden z-50"
+            ></ul>
+          </div>
         </div>
 
         <!-- Desktop links -->
         <div
           class="hidden lg:flex items-center gap-8 text-pink-100 font-semibold"
         >
-          <a href="home" class="hover:text-white transition-colors">Home</a>
+          <a href="index.html" class="hover:text-white transition-colors"
+            >Home</a
+          >
           <a href="aboutus.html" class="hover:text-white transition-colors"
             >About</a
           >
@@ -589,6 +591,7 @@
             >Events</a
           >
           <a
+            href="jobs.html"
             class="hover:text-rose-600/80 transition duration-300 cursor-pointer"
             >Jobs</a
           >
