--- a/jobs.html
+++ b/jobs.html
@@ -19,14 +19,13 @@
       aria-label="Main site header"
     >
       <nav
-        class="mx-auto flex max-w-7xl items-center justify-between p-3 lg:px-6"
-        aria-label="Global navigation"
+        class="mx-auto flex max-w-7xl items-center justify-between p-3 lg:px-8"
       >
         <!-- Logo -->
         <div
           class="flex items-center gap-3 bg-pink-100/80 p-1 px-2 border border-red-600 rounded-2xl"
         >
-          <a href="index.html" class="flex items-center gap-2">
+          <a href="#home" class="flex items-center gap-2">
             <img
               src="public/icon.png"
               alt="Sunny Delights logo"
@@ -38,12 +37,14 @@
           </a>
         </div>
 
-        <!-- Search (hidden on xs) -->
-        <div class="hidden sm:flex items-center w-1/3">
-          <div class="relative w-full">
-            <label for="search" class="sr-only">Search candies</label>
+        <!-- Search -->
+        <div
+          class="hidden sm:flex flex-1 items-center justify-center mx-4 relative"
+        >
+          <div class="relative w-full max-w-md">
+            <label for="searchbox" class="sr-only">Search candies</label>
             <input
-              id="search"
+              id="searchbox"
               type="text"
               placeholder="Search candies..."
               class="w-full pl-10 pr-4 py-2 rounded-full focus:outline-none focus:ring-2 focus:ring-white text-white placeholder-white bg-rose-400/60 border border-white/10"
@@ -67,14 +68,35 @@
                 />
               </svg>
             </div>
+
+            <ul
+              id="hits-dropdown"
+              class="absolute top-full left-0 w-full mt-1 bg-white text-rose-800 rounded-lg shadow-lg max-h-60 overflow-y-auto hidden z-50"
+            ></ul>
           </div>
         </div>
 
+        <!-- Desktop links -->
+        <div
+          class="hidden lg:flex items-center gap-8 text-pink-100 font-semibold"
+        >
+          <a href="index.html" class="hover:text-white transition-colors"
+            >Home</a
+          >
+          <a href="aboutus.html" class="hover:text-white transition-colors"
+            >About</a
+          >
+          <a href="contactus.html" class="hover:text-white transition-colors"
+            >Contact</a
+          >
+          <a href="faq.html" class="hover:text-white transition-colors">FAQ</a>
+        </div>
+
         <!-- Mobile menu button -->
-        <div class="flex items-center">
+        <div class="flex items-center lg:hidden">
           <button
             type="button"
-            class="inline-flex h-8.5 items-center justify-center rounded-md p-2 text-pink-100/80 bg-rose-700 border border-white/40 lg:hidden"
+            class="inline-flex h-8.5 items-center justify-center rounded-md p-2 text-pink-100/80 bg-rose-700 border border-white/40"
             @click="open = !open"
             :aria-expanded="open"
             aria-label="Toggle menu"
@@ -97,16 +119,8 @@
         </div>
       </nav>
 
-      <!-- overlay -->
-      <div
-        x-show="open"
-        x-cloak
-        x-transition.opacity
-        class="fixed inset-0 z-30 bg-black/40"
-        @click="open = false"
-        aria-hidden="true"
-      ></div>
       <aside
+        id="mobileSidebar"
         x-show="open"
         x-cloak
         x-transition:enter="transform transition ease-in-out duration-300"
@@ -122,7 +136,20 @@
         aria-modal="true"
       >
         <div class="flex items-center justify-between px-6 pt-6">
-          <h2 class="text-white font-bold text-lg">Categories</h2>
+          <div
+            class="flex items-center gap-3 bg-pink-100/80 p-1 px-2 border border-red-600 rounded-2xl"
+          >
+            <a href="#home" class="flex items-center gap-2">
+              <img
+                src="public/icon.png"
+                alt="Sunny Delights logo"
+                class="h-6 sm:h-8 w-auto"
+              />
+              <h1 class="font-bold italic text-red-600 text-sm sm:text-base">
+                Sunny Delights
+              </h1>
+            </a>
+          </div>
           <button
             type="button"
             class="rounded-md p-2.5 text-white hover:bg-white/10"
@@ -145,35 +172,77 @@
           </button>
         </div>
 
+        <!-- after the last category link inside the sidebar nav -->
+        <div class="mt-4 border-t border-white/20 pt-4">
+          <label for="mobile-searchbox" class="sr-only">Search candies</label>
+          <div class="relative">
+            <input
+              id="mobile-searchbox"
+              type="text"
+              placeholder="Search candies..."
+              class="w-full pl-10 pr-4 py-2 rounded-full focus:outline-none focus:ring-2 focus:ring-white text-white placeholder-white bg-rose-500/70 border border-white/10"
+            />
+            <div
+              class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
+            >
+              <svg
+                class="h-5 w-5 text-white"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+                aria-hidden="true"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M21 21l-4.35-4.35M17 11a6 6 0 11-12 0 6 6 0 0112 0z"
+                />
+              </svg>
+            </div>
+            <ul
+              id="mobile-hits-dropdown"
+              class="absolute top-full left-0 w-full mt-1 bg-white text-rose-800 rounded-lg shadow-lg max-h-60 overflow-y-auto hidden z-50"
+            ></ul>
+          </div>
+        </div>
+
         <nav class="mt-6 px-6 pb-6 flex flex-col justify-start space-y-3">
           <a
-            href="index.html"
+            href="#home"
             class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
+            @click="open = false"
             >Home</a
           >
           <a
-            href="about.html"
+            href="aboutus.html"
             class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
+            @click="open = false"
             >About</a
           >
           <a
-            href="contact.html"
+            href="contactus.html"
             class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
+            @click="open = false"
             >Contact</a
-          >
-          <a
-            href="events.html"
-            class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
-            >Events</a
           >
           <a
             href="faq.html"
             class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
-            >FAQs</a
+            @click="open = false"
+            >Faq</a
+          >
+          <a
+            href="events.html"
+            class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
+            @click="open = false"
+            >Events</a
           >
           <a
             href="jobs.html"
             class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
+            @click="open = false"
             >Jobs</a
           >
         </nav>
@@ -239,44 +308,105 @@
       </div>
     </section>
 
-    <!-- CART ICON -->
-    <button
-      id="cartButton"
-      class="fixed bottom-4 right-4 bg-rose-600 text-white px-3 py-2 sm:px-4 sm:py-2 rounded-full hover:bg-rose-700 hover:cursor-pointer"
-    >
-      🛒 Cart: <span id="cartCount">0</span>
-    </button>
+    <!-- PRODUCTS -->
+    <section id="products" class="bg-pink-100 p-4 sm:p-5">
+      <div class="flex justify-center items-center my-8 sm:my-12">
+        <span class="text-2xl sm:text-3xl mr-2">🍭</span>
+        <h1
+          class="text-xl sm:text-3xl md:text-4xl font-bold text-rose-600 text-center"
+          style="
+            font-size: calc(
+              1.5rem + (2rem - 1.5rem) * ((100vw - 222px) / (280 - 222))
+            );
+          "
+        >
+          Our Sweet Collection
+        </h1>
+        <span class="text-2xl sm:text-3xl ml-2">🍬</span>
+      </div>
+
+      <div
+        id="productGrid"
+        class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 sm:gap-6"
+      >
+        <!-- Products will be injected here -->
+      </div>
+
+      <!-- Modal Structure -->
+      <div
+        id="productModal"
+        class="modal fixed inset-0 bg-black/75 hidden justify-center items-center p-4 z-50"
+      >
+        <div class="bg-white p-4 sm:p-6 rounded-lg w-full max-w-xs sm:max-w-sm">
+          <img
+            id="modalImage"
+            class="w-full h-40 sm:h-48 object-cover rounded-md mb-3 sm:mb-4"
+            src=""
+            alt="Product Image"
+          />
+          <p id="modalTitle" class="text-xl sm:text-2xl font-semibold mb-2"></p>
+          <p
+            id="modalDescription"
+            class="text-gray-700 mb-2 text-sm sm:text-base"
+          ></p>
+          <p id="modalPrice" class="text-lg font-bold mb-4"></p>
+          <div class="flex justify-center items-center gap-3 sm:gap-5">
+            <button
+              id="addToCartButton"
+              class="bg-rose-600 text-white px-3 py-1 sm:px-4 sm:py-2 rounded hover:bg-rose-700 hover:cursor-pointer"
+            >
+              Add to Cart
+            </button>
+            <button
+              id="closeModal"
+              class="border border-red-600 text-rose-600 px-3 py-1 sm:px-5 sm:py-2 rounded hover:bg-rose-700 hover:text-white hover:cursor-pointer"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <!-- 🛒 Cart Modal -->
+      <div
+        id="cartContainer"
+        class="cartModal fixed inset-0 bg-black/75 hidden justify-center items-center p-4 z-50"
+      >
+        <div class="bg-white p-4 sm:p-6 rounded-lg w-full max-w-xs sm:max-w-sm">
+          <h2 class="text-xl sm:text-2xl font-semibold mb-4">Your Cart</h2>
+          <div id="cartItems" class="mb-3 sm:mb-4">
+            <!-- Cart items will be injected here -->
+          </div>
+          <p class="text-base sm:text-lg font-bold">
+            Total: <span id="cartTotal">$0.00</span>
+          </p>
+          <div
+            class="flex justify-center items-center gap-3 sm:gap-5 mt-3 sm:mt-4"
+          >
+            <button
+              id="closeCart"
+              class="border border-red-600 text-rose-600 px-3 py-1 sm:px-5 sm:py-2 rounded hover:bg-rose-700 hover:text-white hover:cursor-pointer"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Cart Counter -->
+      <button
+        id="cartButton"
+        class="fixed bottom-4 right-4 bg-rose-600 text-white px-3 py-2 sm:px-4 sm:py-2 rounded-full hover:bg-rose-700 hover:cursor-pointer"
+      >
+        🛒 Cart: <span id="cartCount">0</span>
+      </button>
+    </section>
 
     <!-- FOOTER -->
-    <footer class="text-pink-100 border-t border-red-600 bg-rose-400/80 mt-12">
+    <footer class="text-pink-100 border-t border-red-600 bg-rose-400/80">
       <div
-        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 justify-center items-start gap-4 p-6"
+        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 justify-center items-start gap-4 p-6"
       >
-        <div
-          class="text-center flex flex-col items-center space-y-2 font-light"
-        >
-          <p
-            class="uppercase font-bold text-rose-600/80 border-b pb-1 w-full max-w-xs"
-          >
-            Products
-          </p>
-          <a
-            class="hover:text-rose-600/80 transition duration-300 cursor-pointer"
-            >Sunfire Cakes</a
-          >
-          <a
-            class="hover:text-rose-600/80 transition duration-300 cursor-pointer"
-            >Sunlight Candies</a
-          >
-          <a
-            class="hover:text-rose-600/80 transition duration-300 cursor-pointer"
-            >Sunny Lollipops</a
-          >
-          <a
-            class="hover:text-rose-600/80 transition duration-300 cursor-pointer"
-            >Sunburst Chocolates</a
-          >
-        </div>
         <div
           class="text-center flex flex-col items-center space-y-2 font-light"
         >
@@ -302,6 +432,7 @@
             ><i class="ri-facebook-box-line"></i> Facebook</a
           >
         </div>
+
         <div
           class="text-center flex flex-col items-center space-y-2 font-light"
         >
@@ -313,12 +444,12 @@
           <a
             href="aboutus.html"
             class="hover:text-rose-600/80 transition duration-300 cursor-pointer"
-            >About Us</a
+            >About</a
           >
           <a
             href="contactus.html"
             class="hover:text-rose-600/80 transition duration-300 cursor-pointer"
-            >Contact Us</a
+            >Contact</a
           >
           <a
             href="faq.html"
@@ -326,6 +457,7 @@
             >FAQs</a
           >
         </div>
+
         <div
           class="text-center flex flex-col items-center space-y-2 font-light"
         >
@@ -346,6 +478,7 @@
           >
         </div>
       </div>
+
       <div class="flex justify-center border-t border-red-600 bg-rose-800 mt-6">
         <p class="py-2 text-sm text-center text-pink-100">
           @2025 Sunny Delights. All rights reserved.
@@ -357,5 +490,8 @@
       src="https://cdn.jsdelivr.net/npm/alpinejs@latest/dist/cdn.min.js"
       defer
     ></script>
+    <!-- Algolia scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4/dist/algoliasearch-lite.umd.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
